# fachory

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
database/: CMakeLists.txt  database.cpp
database/include/database/: database.hpp
fachory/: CMakeLists.txt  main.cpp
printer/: CMakeLists.txt  main.cpp  printer_manager.cpp  printer_manager.hpp
